test/error/unknown_directive2.true
File 0, line 1, col 1:
invalid directive "bogus"

